<resources>
    <string name="app_name">StreetFood Master</string>
    <string name="search_default">Search by street name</string>
    <string name="search_location">Search by current location</string>
    <string name="search_advance">Advance Search</string>
    <string name="search_food">Search by food name</string>
    <string name="name_text">Enter Business Name</string>
    <string name="mission_text">Your Mission as a Vendor</string>
    <string name="hours_text">Enter your hours</string>
    <string name="location_text">Enter your location</string>
    <string name="contact_text">Enter your email</string>
    <string name="website_text">Enter your website or social media address</string>
    <string name="password_text">Enter a password</string>
    <string name="verify_text">Confirm your password</string>
    <string name="submit_button">SUBMIT</string>
    <string name="action_sign_in">SIGN IN</string>
    <string name="prompt_email">Enter your email</string>
    <string name="prompt_password">Enter your password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="signin_button">Sign in</string>
    <string name="search_button">Search</string>
    <string name="surprise_button">Surprise me!!!</string>
    <string name="welcome_text">Or, enter a location...</string>
    <string name="new_business">Create your business profile</string>
    <string name="title_option_activity">Advance Search</string>
    <string name="title_search_activity">Search by food</string>
    <string name="map">Location Direction</string>
    <string name="pictures">Pictures</string>
    <string name="links_reviews">Reviews</string>
    <string name="menu_button">Menu</string>
    <string name="fave_button">Favorite!!!</string>
    <string name="title_signin_activity">Sign In</string>
    <string name="upload_picture_button">Upload Picture</string>
    <string name="upload_menu_button">Upload Menu</string>
    <string name="title_surprise_activity">Suggestion</string>
    <string name="title_signup_activity">Sign Up</string>
    <string-array name="array_street">
        <item>Burger</item>
        <item>Burrito</item>
        <item>Cheese</item>
        <item>Pho</item>
        <item>Rice</item>
        <item>Noodles</item>
        <item>Thailander</item>
        <item>Vietnamese</item>
        <item>Chinese</item>
        <item>American</item>
        <item>Salmon</item>
        <item>Steak</item>
        <item>Pork</item>
        <item>Fish</item>
    </string-array>
</resources>
