<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_title"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="top"
        android:id="@+id/linearLayout">

        <TextView
            android:id="@+id/map"
            android:layout_height="229dp"
            android:layout_width="190dp"
            android:hint="@string/map"
            android:background="@android:drawable/editbox_background"/>

        <TextView
            android:id="@+id/pictures"
            android:layout_height="229dp"
            android:layout_width="190dp"
            android:hint="@string/pictures"
            android:background="@android:drawable/editbox_background"/>


    </LinearLayout>

    <TextView
        android:id="@+id/enter_location"
        android:layout_height="231dp"
        android:layout_width="fill_parent"
        android:hint="@string/links_reviews"
        android:background="@android:drawable/editbox_background"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/menu_button"
      android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_button"
            android:layout_gravity="center_horizontal"
            android:drawablePadding="4dp"/>

        <Button
            android:id="@+id/fave_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fave_button"
            android:layout_gravity="center_horizontal"
            android:drawablePadding="4dp"/>


    </LinearLayout>

</LinearLayout>